General work on spacing issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,15 +12,25 @@ body {
 
 .partsContainer {
     border-radius: 2%;
-    max-width: 75%;
+    padding-left: .8%;
+    /* max-width: 75%; */
 }
 
 .card {
-    margin: 5px;
+    margin: .35%;
     border: solid black 3px;
-    width: 20%;
+    width: 31.5%;
     display: inline-grid;
     height: 300px;
+}
+
+.partPic {
+    border: solid black;
+    max-height: 150px;
+    max-width: 95%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 form {
@@ -33,4 +43,8 @@ form {
 }
 .designForm {
     max-width: 50%;
+}
+
+button {
+    background-color: purple;
 }
